--- a/new_version/index.html
+++ b/new_version/index.html
@@ -767,15 +767,176 @@
                 <input type="text" class="form-control" placeholder="Khác">
               </div>
             </div>
+<!--  -->
+            <div class="text5">
+              <h3>NHỮNG NỘI DUNG NÀO CẦN ĐƯỢC THỂ HIỆN Ở TRANG CHỦ</h3>
+            </div>
+            <div class="checkbox-layout">
+            <div class="form-check form-check">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+              <label class="form-check-label" for="inlineCheckbox1">Thanh menu</label>
+            </div>
+            <div class="form-check form-check">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+              <label class="form-check-label" for="inlineCheckbox2">Banner</label>
+            </div>
+            <div class="form-check form-check">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+              <label class="form-check-label" for="inlineCheckbox3">Giới thiệu</label>
+            </div>
+            <div class="form-check form-check">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+              <label class="form-check-label" for="inlineCheckbox3">Sản phẩm chính</label>
+            </div>
+            <div class="form-check form-check">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+              <label class="form-check-label" for="inlineCheckbox3">Video</label>
+            </div>
+            <div class="form-check form-check">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+              <label class="form-check-label" for="inlineCheckbox3">Bản đồ</label>
+            </div>
+            <div class="form-check form-check">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+              <label class="form-check-label" for="inlineCheckbox3">Mẫu đăng kí</label>
+            </div>
+            <div class="form-check form-check">
+              <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+              <label class="form-check-label" for="inlineCheckbox3">Footer</label>
+            </div>
+          </div>
+          <div class="row gap-row">
+            <div class="col">
+              <input type="text" class="form-control" placeholder="Khác">
+            </div>
+          </div>
+          <!--  -->
+          <div class="text5">
+            <h3>NHỮNG CHỨC NĂNG NÀO SAU ĐÂY CẦN CÓ TRÊN WEBSITE</h3>
+          </div>
+          <div class="checkbox-layout">
+          <div class="form-check form-check">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+            <label class="form-check-label" for="inlineCheckbox1">Banner slider</label>
+          </div>
+          <div class="form-check form-check">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+            <label class="form-check-label" for="inlineCheckbox2">Video</label>
+          </div>
+          <div class="form-check form-check">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">Chia sẻ mạng xã hội</label>
+          </div>
+          <div class="form-check form-check">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">Form liên hệ</label>
+          </div>
+          <div class="form-check form-check">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">Đăng ký email</label>
+          </div>
+          <div class="form-check form-check">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">Thư viện ảnh</label>
+          </div>
+          <div class="form-check form-check">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">Tìm kiếm</label>
+          </div>
+          <div class="form-check form-check">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">Bài viết mới nhất</label>
+          </div>
+          <div class="form-check form-check">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">Xem nhiều nhất</label>
+          </div>
+          <div class="form-check form-check">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">Thương mại điện tử</label>
+          </div>
+          <div class="form-check form-check">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">Bộ lọc SP</label>
+          </div>
+          <div class="form-check form-check">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">Hỗ trợ trực tuyến</label>
+          </div>
+          <div class="form-check form-check">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">Pop-up Quảng cáo</label>
+          </div>
+          <div class="form-check form-check">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">Đăng ký/ Đăng nhập</label>
+          </div>
+          <div class="form-check form-check">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">Bình luận bài viết</label>
+          </div>
+          <div class="form-check form-check">
+            <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+            <label class="form-check-label" for="inlineCheckbox3">Diễn đàn</label>
+          </div>
+        </div>
+        <div class="row gap-row">
+          <div class="col">
+            <input type="text" class="form-control" placeholder="Khác">
+          </div>
+        </div>
+        <div class="row gap-row">
+          <div class="col">
+            <input type="text" class="form-control" placeholder="Ngôn ngữ nào sẽ được hiển thị trên trang web?">
+          </div>
+        </div>
+        <div class="row gap-row">
+          <div class="col">
+            <input type="text" class="form-control" placeholder="Anh/chị có bất kỳ tài liệu nào có sẵn cho thiết kế trang web không?  Ví dụ: Logo, giao diện wireframe, hoặc tập tin thiết kế, hình ảnh ...">
+          </div>
+        </div>
+        <form>
+          <div class="custom-file">
+            <input type="file" class="custom-file-input" id="customFile">
+          </div>
+        </form>
+        
+        <script>
+        // Add the following code if you want the name of the file appear on select
+        $(".custom-file-input").on("change", function() {
+          var fileName = $(this).val().split("\\").pop();
+          $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
+        });
+        </script>
+        <div class="row gap-row">
+          <div class="col">
+            <input type="text" class="form-control" placeholder="Thời gian dự kiến giới thiệu website mới">
+          </div>
+        </div>
+        <div class="row gap-row">
+          <div class="col">
+            <input type="text" class="form-control" placeholder="Những thông tin thêm liên quan đến việc thiết kế website">
+          </div>
+        </div>
+          <!--  -->
               </div>
               <!-- FORM 3 -->
             </div>
           </div>
         </div>
+        <div class="row">
+        <div class="text4-out col-sm-9 text-left">Cảm ơn anh/ chị đã dành thời gian để điền yêu cầu thiết kế
+          Nếu anh/chị có thông tin, tài liệu gì thêm liên quan, vui lòng gửi email cho chúng tôi.
+          Comma sẽ phản hồi trong thời gian sớm nhất.
+          Xin chân thành cám ơn.
+          </div>
+          <div class="col-sm-3 text-right">
+          <input type="submit" class="btn btn-default submitform" value="GỬI">
+        </div>
+        </div>
       </div>
     </div>
     <!-- end tab toggle -->
-
     <!-- js -->
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
