--- a/new_version/index.html
+++ b/new_version/index.html
@@ -180,9 +180,8 @@
               </div>
             </div>
             <!-- OUT-IN CONTENT -->
-            <div class="layout_content">
             <div class="text3_sub">
-              <h2><span>HẠNG MỤC</span> QUẢN TRỊ</h2>
+              <h2>HẠNG MỤC<span> GIẢI PHÁP</span></h2>
             </div>
             <div class="text4">Chọn tab bên dưới nếu anh/chị muốn làm việc nhiều hơn với chúng tôi
               trong các dịch vụ khác.
@@ -198,7 +197,7 @@
                         aria-expanded="true"
                         aria-controls="collapseOne"
                       >
-                      <div class="text5-out">THƯƠNG HIỆU
+                      <div class="text5-out">CHIẾN DỊCH
                       </div>
                       </button>
                     </h5>
@@ -211,18 +210,41 @@
                     data-parent="#accordion"
                   >
                     <div class="card-body">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high
-                      life accusamus terry richardson ad squid. 3 wolf moon
-                      officia aute, non cupidatat skateboard dolor brunch.
-                      Food truck quinoa nesciunt laborum eiusmod. Brunch 3
-                      wolf moon tempor, sunt aliqua put a bird on it squid
-                      single-origin coffee nulla assumenda shoreditch et.
-                      Nihil anim keffiyeh helvetica, craft beer labore wes
-                      anderson cred nesciunt sapiente ea proident. Ad vegan
-                      excepteur butcher vice lomo. Leggings occaecat craft
-                      beer farm-to-table, raw denim aesthetic synth nesciunt
-                      you probably haven't heard of them accusamus labore
-                      sustainable VHS.
+                      <div class="layout_in-side">              <div class="checkbox-layout">
+                        <div class="form-check form-check">
+                          <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
+                          <label class="form-check-label" for="inlineCheckbox1">Khai trương/Ra mắt</label>
+                        </div>
+                        <div class="form-check form-check">
+                          <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="option2">
+                          <label class="form-check-label" for="inlineCheckbox2">Hội thảo trực tuyến</label>
+                        </div>
+                        <div class="form-check form-check">
+                          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                          <label class="form-check-label" for="inlineCheckbox3">Đến nơi trải nghiệm</label>
+                        </div>
+                        <div class="form-check form-check">
+                          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                          <label class="form-check-label" for="inlineCheckbox3">Chăm sóc</label>
+                        </div>
+                        <div class="form-check form-check">
+                          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                          <label class="form-check-label" for="inlineCheckbox3">Chăm sóc</label>
+                        </div>
+                        <div class="form-check form-check">
+                          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                          <label class="form-check-label" for="inlineCheckbox3">Bán lại</label>
+                        </div>
+                        <div class="form-check form-check">
+                          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                          <label class="form-check-label" for="inlineCheckbox3">Giới thiệu</label>
+                        </div>
+                        <div class="form-check form-check">
+                          <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="option3">
+                          <label class="form-check-label" for="inlineCheckbox3">Trung thành</label>
+                        </div>
+                      </div>
+                    </div>
                     </div>
                   </div>
                 </div>
@@ -236,7 +258,7 @@
                         aria-expanded="false"
                         aria-controls="collapseTwo"
                       >
-                      <div class="text5-out">QUẢNG CÁO</div>
+                      <div class="text5-out">THƯƠNG HIỆU</div>
                       </button>
                     </h5>
                   </div>
@@ -247,6 +269,7 @@
                     data-parent="#accordion"
                   >
                     <div class="card-body">
+                      <div class="layout_in-side">
                       Anim pariatur cliche reprehenderit, enim eiusmod high
                       life accusamus terry richardson ad squid. 3 wolf moon
                       officia aute, non cupidatat skateboard dolor brunch.
@@ -259,6 +282,7 @@
                       beer farm-to-table, raw denim aesthetic synth nesciunt
                       you probably haven't heard of them accusamus labore
                       sustainable VHS.
+                    </div>
                     </div>
                   </div>
                 </div>
@@ -272,7 +296,7 @@
                         aria-expanded="false"
                         aria-controls="collapseThree"
                       >
-                      <div class="text5-out">QUẢNG CÁO PPC</div>
+                      <div class="text5-out">QUẢNG CÁO</div>
                       </button>
                     </h5>
                   </div>
@@ -283,6 +307,7 @@
                     data-parent="#accordion"
                   >
                     <div class="card-body">
+                      <div class="layout_in-side">
                       Anim pariatur cliche reprehenderit, enim eiusmod high
                       life accusamus terry richardson ad squid. 3 wolf moon
                       officia aute, non cupidatat skateboard dolor brunch.
@@ -296,10 +321,48 @@
                       you probably haven't heard of them accusamus labore
                       sustainable VHS.
                     </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-header" id="headingFour">
+                    <h5 class="mb-0">
+                      <button
+                        class="btn btn-link collapsed"
+                        data-toggle="collapse"
+                        data-target="#collapseFour"
+                        aria-expanded="false"
+                        aria-controls="collapseFour"
+                      >
+                      <div class="text5-out">NHÂN SỰ</div>
+                      </button>
+                    </h5>
+                  </div>
+                  <div
+                    id="collapseFour"
+                    class="collapse"
+                    aria-labelledby="headingFour"
+                    data-parent="#accordion"
+                  >
+                    <div class="card-body">
+                      <div class="layout_in-side">
+                      Anim pariatur cliche reprehenderit, enim eiusmod high
+                      life accusamus terry richardson ad squid. 3 wolf moon
+                      officia aute, non cupidatat skateboard dolor brunch.
+                      Food truck quinoa nesciunt laborum eiusmod. Brunch 3
+                      wolf moon tempor, sunt aliqua put a bird on it squid
+                      single-origin coffee nulla assumenda shoreditch et.
+                      Nihil anim keffiyeh helvetica, craft beer labore wes
+                      anderson cred nesciunt sapiente ea proident. Ad vegan
+                      excepteur butcher vice lomo. Leggings occaecat craft
+                      beer farm-to-table, raw denim aesthetic synth nesciunt
+                      you probably haven't heard of them accusamus labore
+                      sustainable VHS.
+                    </div>
+                    </div>
                   </div>
                 </div>
               </div>
-            </div>
             <!-- GIẢI PHÁP -->
             <div class="layout_in-side">
               <div class="text2">
