--- a/en/index.html
+++ b/en/index.html
@@ -14,17 +14,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;500;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/new_version/assets/css/reset.css" />
-    <link rel="stylesheet" href="/new_version/assets/css/style.css" />
-    <link rel="stylesheet" href="/new_version/assets/css/animate.css">
-    <link rel="stylesheet" href="/new_version/assets/css/base.css" />
+    <link rel="stylesheet" href="/assets/css/reset.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/animate.css">
+    <link rel="stylesheet" href="/assets/css/base.css" />
     <title>Sodia Business</title>
   </head>
   <body>
     <header class="header">
       <div class="header-area">
         <a href="https://sodia.agency/" class="header_logo" target="_blank"
-          ><img src="/new_version/assets/img/Logo_red.png" alt="sodia Logo"
+          ><img src="/assets/img/Logo_red.png" alt="sodia Logo"
         /></a>
         <!-- <div class="text1">
           <span><h1>ĐỀ XUẤT GIẢI PHÁP 3X DOANH SỐ TỪ SODIA AGENCY</h1></span>
@@ -44,9 +44,8 @@
             Language
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-            <a class="dropdown-item" href="#">English</a>
-            <a class="dropdown-item" href="#">Vietnames</a>
-            <a class="dropdown-item" href="#">Japan</a>
+            <a class="dropdown-item" href="/en">English</a>
+            <a class="dropdown-item" href="/">Vietnames</a>
           </div>
         </div>
       </div>
