--- a/en/index.html
+++ b/en/index.html
@@ -45,7 +45,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             <a class="dropdown-item" href="/en">English</a>
-            <a class="dropdown-item" href="/">Vietnames</a>
+            <a class="dropdown-item" href="/">Vietnamese</a>
           </div>
         </div>
       </div>
