--- a/en/index.html
+++ b/en/index.html
@@ -55,12 +55,12 @@
       <div class="container col-sm-12">
         <div class="layout_out">
           <div class="layout_in-side">
-            <div class="text2"><h2>THÔNG TIN<span> LIÊN HỆ</span></h2></div>
+            <div class="text2"><h2>CONTACT<span> INFORMATION</span></h2></div>
             <!-- FORM 1 -->
             <form>
               <div class="row gap-row">
                 <div class="col">
-                  <input type="text" class="form-control" placeholder="Khách hàng">
+                  <input type="text" class="form-control" placeholder="Full Name">
                 </div>  
                 <div class="col">
                   <input type="text" class="form-control" placeholder="Email">
@@ -68,20 +68,20 @@
               </div>
               <div class="row gap-row">
                 <div class="col">
-                  <input type="text" class="form-control" placeholder="Điện thoại">
+                  <input type="text" class="form-control" placeholder="Phone">
                 </div>
                 <div class="col">
-                  <input type="text" class="form-control" placeholder="Tên công ty">
+                  <input type="text" class="form-control" placeholder="Company">
                 </div>
               </div>
               <div class="row gap-row">
                 <div class="col">
-                  <input type="text" class="form-control" placeholder="Đã từng hợp tác trước đây">
+                  <input type="text" class="form-control" placeholder="Partner">
                 </div>
               </div>
             </form>
           </div>
-          <div class="text3-out"><h2>CHỌN<span> GIẢI PHÁP</span></h2></div>
+          <div class="text3-out"><h2>PICK<span> SOLUTIONS</span></h2></div>
           <div class="text4-out">Chọn tab bên dưới nếu anh/chị muốn làm việc nhiều hơn với chúng tôi
             trong các dịch vụ khác.
             </div>
