--- a/en/index.html
+++ b/en/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="/assets/css/style.css" />
     <link rel="stylesheet" href="/assets/css/animate.css">
     <link rel="stylesheet" href="/assets/css/base.css" />
-    <title>Sodia Business</title>
+    <title>Business Partner | Sodia Agency</title>
   </head>
   <body>
     <header class="header">
@@ -46,6 +46,7 @@
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             <a class="dropdown-item" href="/en">English</a>
             <a class="dropdown-item" href="/">Vietnamese</a>
+            <a class="dropdown-item" href="/jp">Japanese</a>
           </div>
         </div>
       </div>
@@ -81,9 +82,8 @@
               </div>
             </form>
           </div>
-          <div class="text3-out"><h2>PICK<span> SOLUTIONS</span></h2></div>
-          <div class="text4-out">Chọn tab bên dưới nếu anh/chị muốn làm việc nhiều hơn với chúng tôi
-            trong các dịch vụ khác.
+          <div class="text3-out"><h2>OUR<span> SOLUTIONS</span></h2></div>
+          <div class="text4-out">Select the tab below if you would like to work more with us in other services.
             </div>
           </div>
     </div>
