--- a/index.html
+++ b/index.html
@@ -1210,8 +1210,12 @@
         <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
-              Cảm ơn
-              <ion-icon name="checkmark-circle"></ion-icon>
+              <div class="model-content-gradient">
+                <div class="text5-model"><ion-icon name="checkmark-circle"></ion-icon> CẢM ƠN BẠN ĐÃ GỬI THÔNG TIN CHO SODIA</div>
+              <div class="text4-model">Chúng tôi sẽ phản hồi bạn trong thời gian sớm nhất</div>
+            </div>
+              <div class="modal-content-img"><img src="./assets/img/proposal.png" alt=""></div>
+              <a href="https://m.me/sodia.agency?ref=sodiaagency"><button type="button" class="cuz-btn">Nhận đề xuất qua Messenger</button></a>
             </div>
           </div>
         </div>
