--- a/index.html
+++ b/index.html
@@ -1201,7 +1201,7 @@
         <div class="row">
         <div class="text4-out col-sm-9 text-left">Cảm ơn anh/ chị đã dành thời gian để điền yêu cầu thiết kế
           Nếu anh/chị có thông tin, tài liệu gì thêm liên quan, vui lòng gửi email cho chúng tôi.
-          Comma sẽ phản hồi trong thời gian sớm nhất.
+          Sodia sẽ phản hồi trong thời gian sớm nhất.
           Xin chân thành cám ơn.
           </div>
           <div class="col-sm-3 text-right">
